fix z-index issue with headers

--- a/jeffTest.css
+++ b/jeffTest.css
@@ -56,7 +56,6 @@
 
 #sticky, #stickyDivision2, #stickyRank, #stickyDivision2Rank, #sticky2, #sticky2Division2, #sticky2Rank, #sticky2Division2Rank, .stickyColumn, .stickyColumnRank, .stickyColumnDivision2, .stickyColumnDivision2Rank {
     display: table-cell;
-	z-index: 30;
 }
 
 #sticky.fixed, #stickyDivision2.fixed, .stickyColumn.fixed, .stickyColumnDivision2.fixed {
